--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.application.name=product-service
+server.port=0
+#node balance
+eureka.instance.instance-id=${spring.application.name}:${instanceId:${random.value}}
 
+#add
+spring.datasource.url=jdbc:h2:file:~/product;AUTO_SERVER=true
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
